# synth-python-sdk

./: .gitignore  README.md  build.sh  client_manager.py  config.py  diff.txt  http_client.py  instant_vs_deferred_logging.txt  notes.txt  openapi.json  pyproject.toml  requirements.txt  setup.py  streaming_endpoint_spec.md
.github/workflows/: github-actions-demo.yml
dev/: generate_openapi.py  readme.md  sync_deps.py
dev/testing/: agent_test.py  ai_agent_async.py  ai_agent_sync.py  client_t.py  decorator.py  empty_events.py  openai_lf_par_test.py  openai_lf_test.py  test_setup.py  traces_t.py  upload_payload_t.py
dev/testing/craftax/: agent.py  game_information.py  react.yaml  run_par.py  run_seq.py  run_test.py
src/synth_sdk/tracing/: abstractions.py  config.py  decorators.py  upload.py
synth_sdk/: __init__.py
synth_sdk/config/: settings.py
synth_sdk/provider_support/: anthropic.py  openai.py  openai_lf.py  suppress_logging.py
synth_sdk/tracing/: abstractions.py  base_client.py  client_manager.py  config.py  context.py  d.py  decorators.py  immediate_client.py  local.py  log_client_base.py  primitives.md  retry_queue.py  trackers.py  upload.py  utils.py
synth_sdk/tracing/events/: manage.py  scope.py  store.py
testing/: ai_agent_async.py  ai_agent_hw.py  ai_agent_sync.py  circular.py  decorator.py  openai_autologging.py  pytest_test.py  traces_test.py  upload_payload_test.py  upload_sync_test.py  upload_test_async.py  upload_test_sync.py
tests/: sdk_test.py  test_immediate_logging.py
tests/iteration/craftax/generate_data/records/: episode_classic_1.json
tutorials/: AsyncAgentExample.py  SimpleAgentExample.py  SyncInAsyncExample.py  __init__.py  async_agent_example.py  questions_async.json  reward_signals.json  reward_signals_async.json  simple_agent_example.py  traces.json  traces_async.json
